tests/snapshots/snapshot_test__o_with_indentation_snapshot.snap
---
source: tests/snapshot_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:14
Lines: 4

Buffer:
start
    indented line
    same inden[t]
end
