tests/snapshots/snapshot_test__simple_delete_word.snap
---
source: tests/snapshot_test.rs
expression: test.snapshot_buffer_and_cursor()
---
Cursor: 0:0

world test
