tests/snapshots/snapshot_test__yank_paste_line.snap
---
source: tests/snapshot_test.rs
expression: test.snapshot_buffer_and_cursor()
---
Cursor: 1:0

line 1
line 1
line 2
line 3
